k8s/04_ingress/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress-one-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: test-ingress-one-service
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template: # Pod spec
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: db-app
          image: michalwit/boot-demo:002
          ports:
            - containerPort: 8080
              name: s-boot-port
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: test-ingress-one-service
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo # looks up for pods with this label
  ports:
    - protocol: TCP
      port: 8888
      targetPort: s-boot-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: test-ingress-one-service
  labels:
    app: demo
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 8888
