k8s/04_ingress/two_services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress-two-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-a
  namespace: test-ingress-two-services
  labels:
    app: demo-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-a
  template: # Pod spec
    metadata:
      labels:
        app: demo-a
    spec:
      containers:
        - name: db-app
          image: michalwit/boot-demo:002
          ports:
            - containerPort: 8080
              name: s-boot-port
---
apiVersion: v1
kind: Service
metadata:
  name: demo-a
  namespace: test-ingress-two-services
  labels:
    app: demo-a
spec:
  type: ClusterIP
  selector:
    app: demo-a # looks up for pods with this label
  ports:
    - protocol: TCP
      port: 80
      targetPort: s-boot-port
---
### Second application (demo-b) ###
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-b-deployment
  namespace: test-ingress-two-services
  labels:
    app: demo-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-b
  template: # Pod spec
    metadata:
      labels:
        app: demo-b
    spec:
      containers:
        - name: db-app
          image: michalwit/boot-demo:009
          ports:
            - containerPort: 8080
              name: s-boot-port
---
apiVersion: v1
kind: Service
metadata:
  name: demo-b
  namespace: test-ingress-two-services
  labels:
    app: demo-b
spec:
  type: ClusterIP # ClusterIP should not be exposed outside the cluster
  selector:
    app: demo-b # looks up for pods with this label
  ports:
    - protocol: TCP
      port: 80
      targetPort: s-boot-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: test-ingress-two-services
  labels:
    app: demo
spec:
  ingressClassName: nginx
  rules:
    - host: service-a
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-a
                port:
                  number: 80
    - host: service-b
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-b
                port:
                  number: 80
